--- a/app/src/main/res/layout/item_fragment_teamsort_title.xml
+++ b/app/src/main/res/layout/item_fragment_teamsort_title.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
-    android:background="@color/main_bg"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="@dimen/margin_8dp"
+    android:gravity="center_horizontal">
 
     <TextView
         android:id="@+id/teams_title"
-        android:layout_margin="@dimen/margin_8dp"
-        android:textColor="@color/secondary_text"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_data"
+        android:paddingLeft="@dimen/margin_10dp"
+        android:paddingRight="@dimen/margin_10dp"
+        android:paddingTop="@dimen/margin_4dp"
+        android:paddingBottom="@dimen/margin_4dp"
+        android:textColor="#ffffff" />
 
 </LinearLayout>
