--- a/app/src/main/res/layout/drawer_item.xml
+++ b/app/src/main/res/layout/drawer_item.xml
@@ -1,49 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?attr/selectableItemBackground"
-    >
+    android:background="?attr/selectableItemBackground">
+
     <View
         android:id="@+id/top_divider"
         android:layout_width="match_parent"
         android:layout_height="@dimen/view_margingtop"
+        android:background="@android:color/transparent"
         android:clickable="false"
-        android:visibility="gone"
-        android:background="@android:color/transparent"/>
+        android:visibility="gone" />
+
     <RelativeLayout
-        android:layout_below="@+id/top_divider"
+        android:id="@+id/drawer"
         android:layout_width="match_parent"
         android:layout_height="@dimen/navigation_drawer_item_height"
+        android:layout_below="@+id/top_divider"
         android:background="@drawable/drawer_item_background"
-        android:gravity="center_vertical"
-        android:id="@+id/drawer">
+        android:gravity="center">
+
         <ImageView
             android:id="@+id/drawer_icon"
             android:layout_width="@dimen/icon_size"
             android:layout_height="@dimen/icon_size"
-            android:layout_marginLeft="@dimen/fab_margin"
             android:scaleType="fitXY"
             android:src="@drawable/drawer_icon_news" />
+
         <TextView
             android:id="@+id/drawer_name"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/drawer_text_margin"
             android:layout_toRightOf="@id/drawer_icon"
             android:textColor="@drawable/drawer_text_color"
-            android:textSize="16sp"
-            />
+            android:textSize="16sp" />
     </RelativeLayout>
+
     <View
         android:id="@+id/bottom_divider"
-        android:layout_below="@+id/drawer"
         android:layout_width="match_parent"
         android:layout_height="@dimen/item_divider_line"
-        android:focusable="false"
-        android:visibility="gone"
-        android:layout_marginTop="7dp"
+        android:layout_below="@+id/drawer"
         android:layout_marginBottom="@dimen/view_margingtop"
-        android:background="@color/grey300"/>
+        android:layout_marginTop="7dp"
+        android:background="@color/grey300"
+        android:focusable="false"
+        android:visibility="gone" />
 </RelativeLayout>
