--- a/app/src/main/res/layout/item_fragment_games.xml
+++ b/app/src/main/res/layout/item_fragment_games.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:card_view="http://schemas.android.com/tools"
-    android:clickable="true"
+    android:layout_marginBottom="@dimen/margin_4dp"
     android:layout_marginLeft="@dimen/margin_8dp"
     android:layout_marginRight="@dimen/margin_8dp"
     android:layout_marginTop="@dimen/margin_4dp"
-    android:layout_marginBottom="@dimen/margin_4dp"
+    android:clickable="true"
     android:foreground="?attr/selectableItemBackground"
     card_view:cardCornerRadius="@dimen/margin_4dp"
     card_view:cardElevation="4dp">
@@ -17,99 +17,98 @@
         android:id="@+id/item_head"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:background="@drawable/shot_item_background"
-        >
+        android:orientation="horizontal">
 
         <View
             android:id="@+id/status_indicate"
-            android:visibility="gone"
             android:layout_width="@dimen/margin_4dp"
             android:layout_height="match_parent"
-            android:background="@color/colorPrimary"/>
+            android:background="@color/colorPrimary"
+            android:visibility="gone" />
 
         <LinearLayout
             android:layout_width="@dimen/margin_0dp"
             android:layout_height="match_parent"
-            android:padding="@dimen/margin_12dp"
+            android:layout_weight="1"
             android:orientation="vertical"
-            android:layout_weight="1">
+            android:padding="@dimen/margin_12dp">
+
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/left_teamIcon_iv"
                 android:layout_width="56dp"
                 android:layout_height="56dp"
                 android:layout_gravity="center_horizontal"
                 android:src="@mipmap/myteam"
-                app:border_width="1dp"
-                app:border_color="@color/white"/>
+                app:border_color="@color/white"
+                app:border_width="1dp" />
+
             <TextView
                 android:id="@+id/left_teamName_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
                 android:layout_gravity="center_horizontal"
-                 />
+                android:layout_marginTop="8dp" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="@dimen/margin_0dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:orientation="vertical"
-            android:paddingBottom="@dimen/margin_12dp"
-            android:layout_weight="1">
+            android:paddingBottom="@dimen/margin_12dp">
+
             <TextView
                 android:id="@+id/gamestatus"
                 android:layout_width="wrap_content"
-                android:padding="@dimen/margin_4dp"
-                android:layout_gravity="center_horizontal"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
                 android:background="@drawable/bg_gamestatus"
-                />
+                android:padding="@dimen/margin_4dp" />
 
             <TextView
                 android:id="@+id/scores"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="8dp"
-                android:textSize="22sp"
                 android:layout_gravity="center"
-                 />
+                android:padding="8dp"
+                android:textSize="22sp" />
 
             <TextView
                 android:id="@+id/stats"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorAccent"
                 android:layout_gravity="center"
                 android:paddingLeft="@dimen/margin_8dp"
                 android:paddingRight="@dimen/margin_8dp"
-                android:visibility="gone"
-                />
+                android:textColor="@color/colorAccent"
+                android:visibility="gone" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="@dimen/margin_0dp"
             android:layout_height="match_parent"
-            android:padding="@dimen/margin_12dp"
+            android:layout_weight="1"
             android:orientation="vertical"
-            android:layout_weight="1">
+            android:padding="@dimen/margin_12dp">
+
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/right_teamIcon_iv"
                 android:layout_width="56dp"
                 android:layout_height="56dp"
                 android:layout_gravity="center_horizontal"
                 android:src="@mipmap/myteam"
-                app:border_width="1dp"
-                app:border_color="@color/white"/>
+                app:border_color="@color/white"
+                app:border_width="1dp" />
+
             <TextView
                 android:id="@+id/right_teamName_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
                 android:layout_gravity="center_horizontal"
-                 />
+                android:layout_marginTop="8dp" />
 
         </LinearLayout>
 
