--- a/app/src/main/res/layout/item_fragment_news_morepic_2.xml
+++ b/app/src/main/res/layout/item_fragment_news_morepic_2.xml
@@ -15,62 +15,76 @@
     <RelativeLayout
         android:id="@+id/shotView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="@dimen/margin_0dp"
-        android:background="?attr/selectableItemBackground">
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/newsTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/margin_8dp"
-            android:paddingTop="@dimen/view_margingtop"
+            android:layout_margin="@dimen/margin_8dp"
             android:maxLines="2"
             android:textColor="@color/primary_text"
             android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/newsTime"
-            android:layout_below="@+id/newsDescription"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginRight="@dimen/margin_8dp"
-            android:paddingRight="@dimen/margin_0dp"
-            android:paddingTop="@dimen/margin_4dp"
-            android:textColor="@color/secondary_text"
-            android:textSize="12sp" />
 
-        <TextView
-            android:id="@+id/newsDescription"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/morepic_layout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/newsTitle"
-            android:ellipsize="end"
-            android:maxLines="4"
-            android:paddingBottom="@dimen/margin_12dp"
-            android:paddingLeft="@dimen/margin_12dp"
-            android:paddingRight="@dimen/margin_12dp"
-            android:paddingTop="@dimen/margin_6dp"
-            android:textColor="@color/secondary_text"
-            android:textSize="14sp" />
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/newsImage1"
+                android:layout_width="match_parent"
+                android:layout_height="120dp"
+                android:scaleType="fitXY" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="120dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/newsImage2"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:scaleType="fitXY" />
+
+                <ImageView
+                    android:id="@+id/newsImage3"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:scaleType="fitXY" />
+
+            </LinearLayout>
+
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/newsSource"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_below="@+id/newsTitle"
-            android:layout_toRightOf="@+id/newsTime"
-            android:paddingBottom="@dimen/view_margingtop"
-            android:paddingLeft="@dimen/margin_6dp"
+            android:layout_toLeftOf="@+id/newsTime"
             android:textColor="@color/secondary_text"
-            android:textSize="14sp"
+            android:textSize="11sp"
             android:visibility="gone" />
 
-        <View
+        <TextView
+            android:id="@+id/newsTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/morepic_layout"
+            android:layout_margin="3dp"
+            android:textColor="@color/secondary_text"
+            android:textSize="12sp" />
 
+        <View
             android:id="@+id/divier"
             android:layout_width="match_parent"
             android:layout_height="@dimen/item_divider_line"
