--- a/app/src/main/res/layout/item_fragment_news_normal_2.xml
+++ b/app/src/main/res/layout/item_fragment_news_normal_2.xml
@@ -1,44 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    android:id="@+id/shotView"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/margin_4dp"
-    android:background="@drawable/drawer_news_background"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <TextView
-        android:id="@+id/newsTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/primary_text"
-        android:layout_margin="2dp"
-        android:textSize="12sp"
-        />
-    <ImageView
-        android:layout_below="@+id/newsTitle"
-        android:id="@+id/newsImage"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:scaleType="matrix"
-        />
+    android:layout_marginTop="@dimen/margin_4dp"
+    android:layout_marginBottom="@dimen/margin_2dp"
+    android:layout_marginLeft="@dimen/margin_2dp"
+    android:layout_marginRight="@dimen/margin_2dp"
+    android:foreground="?attr/selectableItemBackground"
+    card_view:cardCornerRadius="@dimen/margin_10dp"
+    card_view:cardElevation="8dp">
 
-    <TextView
-        android:id="@+id/newsTime"
-        android:layout_margin="1dp"
-        android:layout_below="@+id/newsImage"
-        android:layout_width="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_height="wrap_content"
-        android:textColor="@color/secondary_text"
-        android:textSize="11sp"
-        />
-    <View
-        android:id="@+id/divier"
-        android:visibility="gone"
+    <RelativeLayout
+        android:id="@+id/shotView"
         android:layout_width="match_parent"
-        android:layout_marginLeft="@dimen/margin_8dp"
-        android:layout_marginRight="@dimen/margin_8dp"
-        android:layout_height="@dimen/item_divider_line"
-        android:background="@color/divider"/>
-</RelativeLayout>
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/newsTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:maxLines="2"
+            android:textColor="@color/primary_text"
+            android:textSize="14sp" />
+
+        <ImageView
+            android:id="@+id/newsImage"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_below="@+id/newsTitle"
+            android:layout_gravity="center_vertical"
+            android:scaleType="fitXY" />
+
+        <TextView
+            android:id="@+id/newsTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/newsImage"
+            android:layout_margin="3dp"
+            android:textColor="@color/secondary_text"
+            android:textSize="11sp" />
+
+        <View
+            android:id="@+id/divier"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/item_divider_line"
+            android:layout_marginLeft="@dimen/margin_8dp"
+            android:layout_marginRight="@dimen/margin_8dp"
+            android:background="@color/divider"
+            android:visibility="gone" />
+    </RelativeLayout>
+</android.support.v7.widget.CardView>
