--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="colorPrimary">@color/red600</color>
-    <color name="colorPrimaryDark">@color/red700</color>
+    <color name="colorPrimary">#00bcd4</color>
+    <color name="colorPrimaryDark">#009688</color>
     <color name="colorPrimaryLight">@color/red400</color>
     <color name="colorAccent">#448AFF</color>
 
