--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -23,11 +23,26 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
+                android:layout_height="280dp"
                 android:background="@color/colorPrimary"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:padding="@dimen/margin_12dp">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:src="@mipmap/myteam"/>
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:textSize="12sp"
+                    android:layout_marginBottom="@dimen/margin_10dp"
+                    android:textColor="#ffffff"
+                    android:text="内部版：0.0.2"/>
 
 
             </LinearLayout>
