--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -1,5 +1,4 @@
-<com.me.silencedut.nbaplus.ui.wigdets.SwipeBackLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.me.silencedut.nbaplus.ui.wigdets.SwipeBackLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/swipBackLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -18,14 +17,14 @@
             android:id="@+id/settings_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            >
-            <include
-                layout="@layout/toolbar"/>
+            android:orientation="vertical">
+
+            <include layout="@layout/toolbar" />
+
             <FrameLayout
                 android:id="@+id/settings_container"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent" />
         </LinearLayout>
     </RelativeLayout>
 </com.me.silencedut.nbaplus.ui.wigdets.SwipeBackLayout>
